<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, OhHaikuActivity!</string>
    <string name="app_name">OhHaiku</string>
    <string name="tweet_button_title">Tweet</string>
    <string name="save_button_title">Save</string>
    <string name="help_button_title">Help</string>
    <string name="menu_button_title">Menu</string>
    <string name="check_button_title">Check</string>
    <string name="certified_text">Certified Haiku!</string>
    <string name="log_in_to_twitter_title">Log in to Twitter</string>
    <string name="saved_haikus_button_title">My saved Haikus</string>
    <string name="faq_button_title">FAQ</string>
    <string name="haiku_description_text">Haiku Icon</string>
    <string name="save_failed_text">Could not save Haiku</string>
    <string name="save_succeeded_text">Haiku saved...</string>
    <string name="not_certified_haiku_text">Not a valid Haiku</string>
    <string name="haiku_load_failed_text">Load haiku failed miserably</string>
    <string name="help_text">Haiku is a type of poem which originates from Japan. A western Haiku implies 3 rows of text, with the syllables distributed according to 5,7,5. The Japan way of writing a Haiku is however more advanced and sophisticated.</string>
    <string name="haiku_loaded_text">Haiku loaded...</string>
    <string name="update_button_title">Update</string>
    <string name="updated_haiku_text">Haiku updated...</string>
    <string name="update_failed_text">Update failed</string>
    <string name="clear_button_text">Clear</string>
    <string name="update_deleted_haiku_text">Tried to update deleted Haiku - saved new Haiku instead.</string>
	<string name="empty_rows_text">Cannot save/update an empty Haiku!</string>
	<string name="faq1">Q: Is Haiku a form of Chinese poetry? \nA: No, it´s Japanese</string>
	<string name="faq2">Q: Is it true that this app is made by Grupp51? \nA: Yes</string>
	<string name="faq3">Q: Do I need to write a seasonal word in order to get a certified Haiku? \nA: No, this app allows you to write a Haiku without the use of seasonal words</string>
	<string name="faq4">Q: Can Chuck Norris write a Haiku? \nA: Yes, with as many syllables as he likes</string>
	<string name="faq5">Q: Is it true that the all famous Jesper Rönndahl asked for this app to be made? \nA: Yes</string>
</resources>