<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_all" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
          
      <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo" />
    
    </LinearLayout>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="visible" />

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="visible" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq5"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="visible" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="6dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="visible" />

</LinearLayout>