<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_all"
    android:orientation="vertical" >

    <EditText
        android:inputType="text"
        android:id="@+id/editTextRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10" />

    <EditText
        android:inputType="text"
        android:id="@+id/editTextRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:inputType="text"
        android:id="@+id/editTextRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/CheckHaikuButton"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:text="@string/check_button_title" />

        <Button
            android:id="@+id/TweetHaikuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:text="@string/tweet_button_title" />

        <Button
            android:id="@+id/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:text="@string/menu_button_title"
            android:onClick="goToMenu"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/certified_text"
     
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/SaveButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_title" />

</LinearLayout>